[package]
name = "loan-broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.55"
poem-openapi = { version = "2.0.26", features = ["swagger-ui"] }
dotenvy = "0.15.7"
futures-util = "0.3.28"
once_cell = "1.17.2"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
envy = "0.4.2"
dashmap = "5.4.0"
rand = "0.8.5"
uuid = { version = "1.3.3", features = ["serde"] }
reqwest = { version = "0.11.18", default-features = false, features = ["serde_json", "rustls-tls-webpki-roots"] }

[dependencies.sqlx]
version = "0.6.3"
features = [ "macros", "chrono", "runtime-tokio-rustls", "postgres", "offline", "uuid" ]
